--- a/ITP2021_S1_01_G3-main/client/src/css/it19519364.css
+++ b/ITP2021_S1_01_G3-main/client/src/css/it19519364.css
@@ -76,6 +76,21 @@
     font-weight: normal;
 }
 
+.it19519364-thead{
+    background-color: white;
+    color: black;
+    
+}
+
+.it19519364-th{
+    /* border: 1px solid black; */
+    text-align: center;
+    padding: 10px;
+}
+
+.it19519364-td{
+    font-weight: normal;
+}
 
 /*style display views AND download view*/
 .it19519364-display-branch-view{
@@ -122,6 +137,14 @@
 
 .it19519364-my-btn{
     background-color:#4CAF50;
+  border-color: none;
+  color:white;
+  border-radius: 0.2rem;
+  margin-left: 10px;
+}
+
+.it19519364-myRed-btn{
+    background-color:#dc3545;
   border-color: none;
   color:white;
   border-radius: 0.2rem;
