requests with id 2

--- a/ITP2021_S1_01_G3-main/client/src/css/IT19140162.css
+++ b/ITP2021_S1_01_G3-main/client/src/css/IT19140162.css
@@ -73,6 +73,9 @@
   border: 1px solid #4CAF50;
   border-radius: 8px;
 }
+#it19140162-delFont{
+  height: 60px;
+}
 
 #it19140162-card{
   width: 18rem;
