--- a/ITP2021_S1_01_G3-main/client/src/components/Cart_Layout/Cart_DN.css
+++ b/ITP2021_S1_01_G3-main/client/src/components/Cart_Layout/Cart_DN.css
@@ -1,5 +1,5 @@
 .DNbody {
-    background: linear-gradient(200deg, #BBDEFB 60%, #42A5F5 60%)
+    background: linear-gradient(200deg, #d9e0e6 60%, #68c077 60%);
   }
   
 .cartHeadTitle{
