--- a/ITP2021_S1_01_G3-main/client/src/components/Order_dash/IT19184722OrderDash.css
+++ b/ITP2021_S1_01_G3-main/client/src/components/Order_dash/IT19184722OrderDash.css
@@ -1,5 +1,5 @@
 .IT19184722body{
-  background: linear-gradient(110deg, #BBDEFB 60%, #42A5F5 60%)
+  background: linear-gradient(200deg, #d9e0e6 60%, #68c077 60%);
 } 
 
 .IT19184722DashTitle{
