--- a/ITP2021_S1_01_G3-main/client/src/componentsFlip/Footer/itc19988870_style.css
+++ b/ITP2021_S1_01_G3-main/client/src/componentsFlip/Footer/itc19988870_style.css
@@ -4,7 +4,7 @@
     bottom: 0;
     width: 100%;
     height: 70px;
-    background-color:#2874f0;
+    background-color:#4CAF50;
     color: white;
     text-align: center;
     
