Stock part connect 1st attempt other all part

--- a/ITP2021_S1_01_G3-main/client/src/containersAdmin/Category/itc19988870_style.css
+++ b/ITP2021_S1_01_G3-main/client/src/containersAdmin/Category/itc19988870_style.css
@@ -14,9 +14,24 @@
     display: flex;
     align-items: center;
 }
+ .actionBtnContainer_cat{
+    background-color:#4CAF50 ;
+ }
 
 .actionBtnContainer > button{
     border: 0;
     margin: 0 5px;
-    font-size: 14px;
+    font-size: 20px;
+}
+.CAT {
+    background-color:#4CAF50 ;
+}
+.del{
+    background-color:red;
+}
+.add{
+    background-color:#4CAF50 ;
+}
+.edit{
+    background-color:#4CAF50 ;
 }
