--- a/ITP2021_S1_01_G3-main/client/src/componentsAdmin/Layout/itc19988870_style.css
+++ b/ITP2021_S1_01_G3-main/client/src/componentsAdmin/Layout/itc19988870_style.css
@@ -7,6 +7,7 @@
     padding: 0;
     padding-top: 60px;
     box-shadow: inset 0 0 2px gray;
+    margin-top: 57px;
 }
 .sidebar a{
     display: block;
@@ -28,6 +29,6 @@
     text-decoration: none;
 }
 .sidebar ul li a.active{
-    background: #333;
+    background: #4CAF50;
     color: #fff;
 }
