--- a/ITP2021_S1_01_G3-main/client/src/components/home/home.css
+++ b/ITP2021_S1_01_G3-main/client/src/components/home/home.css
@@ -1,21 +1,33 @@
-.cushome-card {
-    /* Add shadows to create the "card" effect */
-    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
-    transition: 0.3s;
-    width: 150px;
-    min-height: 50px;
+.cushome-column {
+    float: left;
+    width: 25%;
+    padding: 0 10px;
   }
   
-  /* On mouse-over, add a deeper shadow */
-  .cushome-card:hover {
-    box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
+  /* Remove extra left and right margins, due to padding */
+  .cushome-row {margin: 50px auto; width: 80%;}
+  
+  /* Clear floats after the columns */
+  .cushome-row:after {
+    content: "";
+    display: table;
+    clear: both;
   }
   
-  /* Add some padding inside the card container */
-  .cushome-container {
-    padding: 2px 16px;
+  /* Responsive columns */
+  @media screen and (max-width: 600px) {
+    .cushome-column {
+      width: 100%;
+      display: block;
+      margin-bottom: 20px;
+    }
   }
-  .cushome-main{
-      width: 80%;
-      margin: 50px auto;
+  
+  /* Style the counter cards */
+  .cushome-card {
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+    padding: 16px;
+    text-align: center;
+    margin-top: 20px;
+    background-color: white;
   }
